--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # build artifacts
 .gopath/pkg/
 build/
+
+# testing artifacts
+testing/postgresql-data/
+testing/postgresql-run/
+testing/postgresql.log
