--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -15,6 +15,20 @@ variables:
 vendoring:
   enabled: true
 
+githubWorkflows:
+  global:
+    ignorePaths: [ "**.md" ] # all Markdown files
+  ci:
+    enabled: true
+    coveralls: true
+    postgres:
+      enabled: true
+  license:
+    enabled: true
+  spellCheck:
+    enabled: true
+    ignorePaths: [] # override global setting so that nothing is ignored
+
 verbatim: |
   # convenience targets for developers: `make run-api/run-collector/run-worker/test-asset-type-*`
   # runs one of the components, with environment options sourced from $PWD/.env
