--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,6 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    if: '!contains(github.event.head_commit.message, ''[ci skip]'')'
     steps:
     - name: Check out code
       uses: actions/checkout@v2
@@ -62,7 +61,7 @@ jobs:
         COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GIT_BRANCH: ${{ github.head_ref }}
       run: |
-        GO111MODULE=off go get -u github.com/mattn/goveralls
+        go install github.com/mattn/goveralls@latest
         goveralls -service=github -coverprofile=build/cover.out
     services:
       postgres:
