--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: "1.16"
-    - name: Run gofmt, golint, go vet
+    - name: Run gofmt, go vet, staticcheck
       run: GO_BUILDFLAGS='-mod vendor' make static-check
   test:
     name: Test
