--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,5 +70,6 @@ jobs:
           POSTGRES_PASSWORD: postgres
         ports:
         - 54321:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s
+          --health-retries 5
 
