[ci skip] update field name

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -18,7 +18,7 @@ vendoring:
 golangciLint:
   createConfig: true
 
-githubWorkflows:
+githubWorkflow:
   global:
     ignorePaths: [ "**.md" ] # all Markdown files
   ci:
