--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -26,6 +26,8 @@ githubWorkflow:
     coveralls: true
     postgres:
       enabled: true
+  codeQL:
+    enabled: true
   license:
     enabled: true
   spellCheck:
