--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -27,6 +27,7 @@ golangciLint:
 githubWorkflow:
   global:
     assignees:
+      - majewsky
       - SuperSandro2000
     ignorePaths: [ "**.md" ] # all Markdown files
   ci:
