--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -37,6 +37,12 @@
         ".*"
       ],
       "groupName": "External dependencies"
+    },
+    {
+      "matchPackageNames": [
+        "^postgres$"
+      ],
+      "allowedVersions": "12"
     }
   ],
   "prHourlyLimit": 0,
