renovate: fix match syntax

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -40,7 +40,7 @@
     },
     {
       "matchPackageNames": [
-        "^postgres$"
+        "postgres"
       ],
       "allowedVersions": "12"
     }
