--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -7,6 +7,9 @@ binaries:
   - name:        castellum
     fromPackage: .
     installTo:   bin/
+  - name:        castellum-netapp-scout
+    fromPackage: ./cmd/netapp-scout
+    installTo:   bin/
 
 coverageTest:
   only: '/internal'
