load type Config from YAML instead of from env vars
I already had mixed feelings about CASTELLUM_MAX_ASSET_SIZES when we
added it. But the seeds are way too complicated to cram them into env
vars, so we might as well put the entire Config type into a YAML.

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -55,9 +55,10 @@ renovate:
 
 verbatim: |
   # convenience targets for developers: `make run-api/run-collector/run-worker/test-asset-type-*`
-  # runs one of the components, with environment options sourced from $PWD/.env; and resource
-  # configuration optionally sourced from $PWD/test-config-$ASSET_TYPE.json
+  # runs one of the components, with environment options sourced from $PWD/.env; and configuration
+  # from $PWD/test-config.yaml; and resource configuration optionally sourced
+  # from $PWD/test-config-$ASSET_TYPE.json
   run-%: build/castellum
-    set -euo pipefail && source ./.env && ./build/castellum $*
+    set -euo pipefail && source ./.env && ./build/castellum $* ./test-config.yaml
   test-asset-type-%: build/castellum
-    set -euo pipefail && source ./.env && ./build/castellum test-asset-type $* "$$(test -f "test-config-$*.json" && cat "test-config-$*.json")"
+    set -euo pipefail && source ./.env && ./build/castellum test-asset-type ./test-config.yaml $* "$$(test -f "test-config-$*.json" && cat "test-config-$*.json")"
