--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,5 @@ test-*.yaml
 test-config-*.json
 
 # testing artifacts
-testing/postgresql-data/
-testing/postgresql-run/
-testing/postgresql.log
+/.testdb
 *.actual
