enable golang.autoupdateableDeps

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -19,6 +19,7 @@ dockerfile:
   enabled: true
 
 golang:
+  autoupdateableDeps: ^github.com/(?:sapcc|sap-cloud-infrastructure)/
   setGoModVersion: true
 
 golangciLint:
